# hospital-system

./: Dockerfile  README.md  docker-compose.yml  gemini_patient_prompt.txt  gemini_setup_prompt.txt  pyproject.toml  run.py  setup.py  sonar-project.properties
.github/workflows/: on_pull.yml  on_push.yml
app/: __init__.py  config.py  consts.py  decorators.py  di_container.py  exceptions.py  extentions.py
app/models/: models.py  schemas.py
app/repositories/: repository.py
app/services/: ai_service.py  department_service.py  doctor_service.py  notification_service.py  patient_service.py  ward_service.py
app/views/: __init__.py  department_view.py  doctor_view.py  patients_view.py  ward_view.py
migrations/versions/: 190787152cb0_.py  215f65d79dde_updated_doctor_model.py  516f6ba10073_updated_doctor_model.py  79444ea9bf0c_initial_migration.py  d9058f0ec29a_initial_migration.py
resources/: gemini_patient_prompt.txt  gemini_setup_prompt.txt
tests/repositories/: test_repositiry.py
tests/services/: test_ai_service.py  test_departments_service.py  test_doctor_service.py  test_notification_service.py  test_patient_service.py  test_ward_service.py
tests/views/: test_departments_view.py  test_doctors_view.py  test_patients_view.py  test_wards_view.py
