[tool.poetry]
name = "hospital-system"
version = "0.1.0"
description = ""
authors = ["denys-stefanko <partner.denys.stefanko@philips.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
flask-injector = "^0.15.0"
psycopg2-binary = "^2.9.10"
pydantic = "^2.10.4"

[tool.poetry.dev-dependencies]
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
